# raytracer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildAndRun.sh
src/: color.cpp  color.h  display.cpp  display.h  light.cpp  light.h  ray.cpp  ray.h  raytracer.cpp  render.cpp  render.h  sphere.cpp  sphere.h  triple.cpp  triple.h  vector3.cpp  vector3.h
src/entities/: camera.cpp  camera.h  entity.cpp  entity.h  entityGenerator.cpp  entityGenerator.h
src/entities/lights/: light.cpp  light.h  lightGenerator.cpp  lightGenerator.h  lightOmni.cpp  lightOmni.h  lightOmniGen.cpp  lightOmniGen.h  lightOmniGenerator.cpp  lightOmniGenerator.h  omni.cpp  omni.h
src/entities/objects/: materials.cpp  materials.h  object.cpp  object.h  objectGenerator.cpp  objectGenerator.h  sphere.cpp  sphere.h  sphereGen.cpp  sphereGen.h  sphereGenerator.cpp  sphereGenerator.h
src/entity_generators/: entity_gen.cpp  entity_gen.h
src/frontend/: display.cpp  display.h  vfd.cpp  vfd.h
src/render/: ray.cpp  ray.h  render.cpp  render.h  sampler.cpp  sampler.h  settings.h
src/scene/: plain.h
src/scenes/: dof.cpp  dof.h  generated.cpp  generated.h  large.cpp  large.h  large2.cpp  large2.h  lights.cpp  lights.h  mandelbrot.cpp  mandelbrot.h  plain.cpp  plain.h  scene.cpp  scene.h  sceneGenerator.cpp  sceneGenerator.h
src/types/: color.cpp  color.h  triple.cpp  triple.h  vector3.cpp  vector3.h
src/utils/: debounce.cpp  debounce.h  utils.cpp  utils.h
